--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "application_name": "FluffyChat",
   "application_welcome_message": null,
-  "default_homeserver": "matrix.org",
-  "web_base_url": "https://fluffychat.im/web",
-  "privacy_url": "https://fluffychat.im/en/privacy.html",
+  "default_homeserver": "oi6.uk",
+  "web_base_url": "https://ok6.uk/web",
+  "privacy_url": "https://ok6.uk/en/privacy.html",
   "render_html": false,
   "hide_redacted_events": false,
   "hide_unknown_events": false
