--- a/vercel.json
+++ b/vercel.json
@@ -7,23 +7,12 @@
     }
   ],
   "rewrites": [
-    {
-      "source": "/(.*\\.wasm)",
-      "destination": "/build/web/$1"
-    },
-    {
-      "source": "/(.*\\.js)",
-      "destination": "/build/web/$1"
-    },
-    {
-      "source": "/(.*\\.json)",
-      "destination": "/build/web/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/build/web/index.html"
-    }
-  ],
+  { "source": "/(.*\\.wasm)", "destination": "/build/web/$1" },
+  { "source": "/(.*\\.js)", "destination": "/build/web/$1" },
+  { "source": "/(.*\\.json)", "destination": "/build/web/$1" },
+  { "source": "/assets/(.*)", "destination": "/build/web/assets/$1" },
+  { "source": "/(.*)", "destination": "/build/web/index.html" }
+],
   "headers": [
     {
       "source": "/(.*\\.wasm)",
